--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,10 +4,22 @@
     width: 50%;
     padding: 1.2em;
     margin:auto;
-    margin-bottom: 2em;
+    margin-bottom: 5em;
     border-radius: 20px;
     background-color: #8595A3;
     border: 0px;
     color: white;
     cursor: pointer;
+}
+.button:focus{
+    outline: 0px;
+}
+.contenedor{
+    padding-top: 10%;
+}
+
+.cal{
+    margin-top: 10%;
+    margin-right: auto;    
+    margin-left: auto;
 }
