--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,6 @@
     margin-top: 10%;
     margin-right: auto;    
     margin-left: auto;
-    box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2);
-    border: 0px;
+    box-shadow: 0 30px 40px 0 rgba(16, 36, 94, 0.2) !important;
+    border: 0px !important;
 }
