--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
-input, select {
+input{
   display: block;
   border: 0px;
   font-size: medium;
@@ -29,6 +29,7 @@ input, select {
 input::placeholder {
   color: rgba(151, 179, 206, 0.658);
 }
+
 
 textarea {
   border: 0px;
